<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple test task</string>
    <string name="action_about">About</string>
    <string name="about_title">About.</string>
    <string name="no_network_connection">No network connection is available.</string>
    <string name="you_need_check_settings">You need to check the network settings.</string>
    <string name="settings_btn_title">Settings&#8230;</string>
    <string name="yes_btn_title">Yes</string>
    <string name="ok_btn_title">OK</string>
    <string name="no_btn_title">No</string>
    <string name="cancel_btn_title">Cancel</string>
    <string name="delete_confirm">Сonfirm the deletion.</string>
    <string name="are_you_sure_delete">Are you sure you want to delete the record?</string>
    <string name="failed_data_refresh">Failed to refresh the data!</string>
    <string name="refresh_network_problems">Perhaps a network problem.</string>
    <string name="refresh_json_wrong">The data format is wrong.</string>
    <string name="refresh_action_title">Refresh data</string>
    <string name="code_title">Code: </string>
    <string name="price_title">Price: </string>
    <string name="details_title">Details: </string>
    <string name="dispaly_title">Display: </string>
    <string name="processor_title">Processor: </string>
    <string name="memory_title">Memory: </string>
    <string name="hdd_title">Hdd: </string>
    <string name="other_title">Other: </string>
    <string name="description_title">Description: </string>
    <string name="comments_btn_title">Comments</string>
    <string name="delete_content_description">delete</string>
    <string name="expand_content_description">expand</string>
    <string name="about_text">This simple Helloworld application is the result of a test task for some potential employer.
        \nIt just gets data in the Json format from the Web site on a specific hardcoded address, parses, stores them in the database, and displays on the screen, allowing you to delete some records. </string>

</resources>