<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/recordNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_title" />
            
            <TextView
                android:id="@+id/codeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_title" />
        <TextView
            android:id="@+id/priceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        
        
        </LinearLayout>

        <TextView
            android:id="@+id/detailsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dispaly_title" />
             
            <TextView
                android:id="@+id/displayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              />
            
            </LinearLayout>
            
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/processor_title" 
             />
                 
            <TextView
                android:id="@+id/processorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            </LinearLayout>

            
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memory_title" 
             />
            <TextView
                android:id="@+id/memoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            
            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hdd_title" 
             />
            
            <TextView
                android:id="@+id/hddText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            
            </LinearLayout>
            
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_title" 
                
             />    
            <TextView
                android:id="@+id/otherText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_title" />

        <TextView
            android:id="@+id/decrriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

        <Button
            android:id="@+id/commentsButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="0dp"
            android:background="#0000"
            android:drawableLeft="@drawable/expand"
            android:gravity="left|center_vertical"
            android:text="@string/comments_btn_title" />

        <LinearLayout
            android:id="@+id/commentsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp" >
        </LinearLayout>
    </LinearLayout>

</ScrollView>